--- a/src/product-style.css
+++ b/src/product-style.css
@@ -39,7 +39,7 @@ body {
     margin-top: 5px;
   }
   
-  .cart {
+  .score{
     margin-right: 25px;
     float: right;
     border: 1px solid #d8d8d8;
